--- a/styleForm.css
+++ b/styleForm.css
@@ -41,10 +41,19 @@ body{
 }
 
 .shadow{
-    margin: 20px 500px;
+    margin: 1em 31em;
     background-color: peachpuff;
     border-radius: 100px;
     box-shadow: 0 0 5px 2px;
+}
+
+@media screen and (max-width: 1024px){
+    .shadow{
+        margin: 1em 15em;
+        background-color: peachpuff;
+        border-radius: 100px;
+        box-shadow: 0 0 5px 2px;
+    }
 }
 
 .dataSending{
@@ -72,8 +81,16 @@ body{
 
 #formSend{
     background-color: peachpuff;
-    margin: 20px 500px;
+    margin: 1em 31em;
     border-radius: 100px;
+}
+
+@media screen and (max-width: 1024px){
+    #formSend{
+        background-color: peachpuff;
+        margin: 1em 15em;
+        border-radius: 100px;
+    }
 }
 
 .formInputText{
