Исправление отправки записей на бд

--- a/styleForm.css
+++ b/styleForm.css
@@ -93,6 +93,10 @@ body{
     }
 }
 
+.formInput > select {
+    width: 30em;
+}
+
 .formInputText{
     display: flex;
     justify-content: flex-start;
